--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <load src="./partials/footer.html" />
     <load src="./partials/modal.html" />
 
-    <script src="./js/switcher.js" defer></script>
+    <script type="module" src="./js/switcher.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
